tests/miniJava/pos/000053_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = java [ 0 . length ] ; } }
