tests/miniJava/neg/001956_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 . java ( 0 Main , 0 ) ; } }
